fix spacing and styling for background slideshow of landing page

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,5 +13,6 @@
   -webkit-box-flex: 1;
   -ms-flex: 1 0 auto;
   flex: 1 0 auto;
-  min-height: 520px;
+  display: relative;
+  overflow: hidden;
 }
