--- a/src/components/pages/Landing/Landing.module.css
+++ b/src/components/pages/Landing/Landing.module.css
@@ -1,146 +1,31 @@
 .wrapper {
-  z-index: -4;
-  /* background: blue; */
   position: absolute;
-  width: 100%;
-  height: 100vh;
-  min-height: 800px;
-  left: 0;
+  z-index: -3;
   top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 122px);
+  min-height: 500px;
+  background: blue;
 }
 
 .innerWrapper {
   margin-top: 147px;
-  height: calc(100% - (147px + 122px));
-  overflow: hidden;
-  background: black;
-  /* border-top: 2px solid grey; */
-  /* border-bottom: 2px solid grey; */
-}
-
-.slideshow,
-.slideshow:after {
-  position: absolute;
-  z-index: 5;
-  top: 0;
-  left: 0;
+  height: calc(100% - 147px);
   width: 100%;
-  height: 100%;
-}
-
-.slideshow:after {
-  content: '';
-}
-
-.slideshow li span {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  color: transparent;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: none;
-  opacity: 0;
-  z-index: 0;
-  -webkit-animation: imageAnimation 48s linear infinite 0s;
-  animation: imageAnimation 48s linear infinite 0s;
-}
-
-.slideshow li:nth-child(1) span {
-  background-image: url(./img/landing_0001_f.jpg);
-}
-.slideshow li:nth-child(2) span {
-  background-image: url(./img/landing_0002_f.jpg);
-  -webkit-animation-delay: 6s;
-  animation-delay: 6s;
-}
-.slideshow li:nth-child(3) span {
-  background-image: url(./img/landing_0003_f.jpg);
-  -webkit-animation-delay: 12s;
-  animation-delay: 12s;
-}
-.slideshow li:nth-child(4) span {
-  background-image: url(./img/landing_0004_f.jpg);
-  -webkit-animation-delay: 18s;
-  animation-delay: 18s;
-}
-.slideshow li:nth-child(5) span {
-  background-image: url(./img/landing_0005_f.jpg);
-  -webkit-animation-delay: 24s;
-  animation-delay: 24s;
-}
-.slideshow li:nth-child(6) span {
-  background-image: url(./img/landing_0006_f.jpg);
-  -webkit-animation-delay: 30s;
-  animation-delay: 30s;
-}
-.slideshow li:nth-child(7) span {
-  background-image: url(./img/landing_0007_f.jpg);
-  -webkit-animation-delay: 36s;
-  animation-delay: 36s;
-}
-.slideshow li:nth-child(8) span {
-  background-image: url(./img/landing_0008_f.jpg);
-  -webkit-animation-delay: 42s;
-  animation-delay: 42s;
-}
-
-@-webkit-keyframes imageAnimation {
-  0% {
-    opacity: 0;
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  8% {
-    opacity: 1;
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-  17% {
-    opacity: 1;
-  }
-  25% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes imageAnimation {
-  0% {
-    opacity: 0;
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  8% {
-    opacity: 1;
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-  17% {
-    opacity: 1;
-  }
-  25% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
+  background: yellow;
 }
 
 @media (min-width: 332px) {
   .innerWrapper {
     margin-top: 107px;
-    height: calc(100% - (107px + 122px));
+    height: calc(100% - 107px);
   }
 }
 
 @media (min-width: 992px) {
   .innerWrapper {
     margin-top: 151px;
-    height: calc(100% - (151px + 122px));
+    height: calc(100% - 151px);
   }
 }
